--- a/packages/SystemUI/res/layout/halo_speech.xml
+++ b/packages/SystemUI/res/layout/halo_speech.xml
@@ -6,8 +6,9 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
+        android:id="@+id/ticker_wrapper"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="@dimen/notification_min_height" >
 
         <RelativeLayout
             android:id="@+id/ticker"
