--- a/packages/SystemUI/res/layout/halo_speech.xml
+++ b/packages/SystemUI/res/layout/halo_speech.xml
@@ -12,18 +12,24 @@
 
         <RelativeLayout
             android:id="@+id/ticker"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/bubble"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:singleLine="false"
-            android:maxLines = "3"
-            android:textColor="#fff"
-            android:visibility="gone"             
-            android:textSize="@dimen/halo_speech_text_size" />
+            android:layout_centerVertical="true"
+            android:padding="5dp"
+            android:textColor="#ffffff"
+            android:fontFamily="sans-serif-light"
+            android:textSize="@dimen/halo_speech_text_size"
+            android:textStyle="bold"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:fadingEdge="horizontal"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
